--- a/index.html
+++ b/index.html
@@ -1,28 +1,33 @@
+
 <!DOCTYPE html>
 <html lang="id" class="dark">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WebFolio</title>
+    <title>4RISE</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <script>
       tailwind.config = {
-        darkMode: 'class', // Mengaktifkan dark mode manual via class
+        darkMode: 'class',
         theme: {
           extend: {
             fontFamily: {
               sans: ['Inter', 'sans-serif'],
             },
             colors: {
-              primary: '#6366f1', // Indigo 500
-              secondary: '#a855f7', // Purple 500
-              dark: '#0f172a', // Slate 900
-              card: '#1e293b', // Slate 800
+              primary: '#6366f1',
+              secondary: '#a855f7',
+              dark: '#0f172a',
+              card: '#1e293b',
             },
             animation: {
               'blob': 'blob 10s infinite',
               'grid-flow': 'grid-flow 20s linear infinite',
+              'float': 'float 15s ease-in-out infinite',
+              'float-reverse': 'float-reverse 18s ease-in-out infinite',
+              'spin-slow': 'spin 30s linear infinite',
+              'slow-zoom': 'slow-zoom 10s ease-in-out infinite',
             },
             keyframes: {
               blob: {
@@ -31,9 +36,23 @@
                 '66%': { transform: 'translate(-20px, 20px) scale(0.9)' },
                 '100%': { transform: 'translate(0px, 0px) scale(1)' },
               },
+              float: {
+                '0%, 100%': { transform: 'translate(0px, 0px) rotate(0deg)' },
+                '33%': { transform: 'translate(40px, -60px) rotate(5deg)' },
+                '66%': { transform: 'translate(-20px, 30px) rotate(-5deg)' },
+              },
+              'float-reverse': {
+                '0%, 100%': { transform: 'translate(0px, 0px) rotate(0deg)' },
+                '33%': { transform: 'translate(-50px, 40px) rotate(-10deg)' },
+                '66%': { transform: 'translate(30px, -20px) rotate(10deg)' },
+              },
               'grid-flow': {
                 '0%': { backgroundPosition: '0 0' },
                 '100%': { backgroundPosition: '50px 50px' },
+              },
+              'slow-zoom': {
+                '0%, 100%': { transform: 'scale(1)' },
+                '50%': { transform: 'scale(1.15)' },
               }
             }
           }
@@ -42,18 +61,16 @@
     </script>
     <style>
       body {
-        /* Default transition for smooth theme switching */
         transition: background-color 0.3s ease, color 0.3s ease;
       }
       
-      /* Background Grid Pattern */
       .bg-grid-pattern {
         background-size: 50px 50px;
         background-image: 
           linear-gradient(to right, rgba(99, 102, 241, 0.05) 1px, transparent 1px),
           linear-gradient(to bottom, rgba(99, 102, 241, 0.05) 1px, transparent 1px);
-        mask-image: linear-gradient(to bottom, black 40%, transparent 100%);
-        -webkit-mask-image: linear-gradient(to bottom, black 40%, transparent 100%);
+        mask-image: radial-gradient(circle at center, black, transparent 80%);
+        -webkit-mask-image: radial-gradient(circle at center, black, transparent 80%);
       }
 
       .dark .bg-grid-pattern {
@@ -62,7 +79,6 @@
           linear-gradient(to bottom, rgba(255, 255, 255, 0.03) 1px, transparent 1px);
       }
 
-      /* Custom Scrollbar */
       ::-webkit-scrollbar {
         width: 8px;
       }
@@ -76,11 +92,13 @@
       .dark ::-webkit-scrollbar-thumb {
         background: #334155; 
       }
-      ::-webkit-scrollbar-thumb:hover {
-        background: #94a3b8; 
+      
+      .no-scrollbar::-webkit-scrollbar {
+        display: none;
       }
-      .dark ::-webkit-scrollbar-thumb:hover {
-        background: #475569; 
+      .no-scrollbar {
+        -ms-overflow-style: none;
+        scrollbar-width: none;
       }
     </style>
   <script type="importmap">
