--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>4RISE</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">
     <script>
       tailwind.config = {
         darkMode: 'class',
@@ -14,6 +14,7 @@
           extend: {
             fontFamily: {
               sans: ['Inter', 'sans-serif'],
+              plus: ['"Plus Jakarta Sans"', 'sans-serif'],
             },
             colors: {
               primary: '#6366f1',
@@ -28,6 +29,11 @@
               'float-reverse': 'float-reverse 18s ease-in-out infinite',
               'spin-slow': 'spin 30s linear infinite',
               'slow-zoom': 'slow-zoom 10s ease-in-out infinite',
+              'shimmer': 'shimmer 2.5s infinite linear',
+              'fade-in-up': 'fade-in-up 0.8s ease-out forwards',
+              'fade-in-down': 'fade-in-down 0.8s ease-out forwards',
+              'scale-up': 'scale-up 0.6s cubic-bezier(0.34, 1.56, 0.64, 1) forwards',
+              'reveal-right': 'reveal-right 0.8s ease-out forwards',
             },
             keyframes: {
               blob: {
@@ -53,6 +59,26 @@
               'slow-zoom': {
                 '0%, 100%': { transform: 'scale(1)' },
                 '50%': { transform: 'scale(1.15)' },
+              },
+              shimmer: {
+                '0%': { backgroundPosition: '-200% 0' },
+                '100%': { backgroundPosition: '200% 0' },
+              },
+              'fade-in-up': {
+                '0%': { opacity: '0', transform: 'translateY(20px)' },
+                '100%': { opacity: '1', transform: 'translateY(0)' },
+              },
+              'fade-in-down': {
+                '0%': { opacity: '0', transform: 'translateY(-20px)' },
+                '100%': { opacity: '1', transform: 'translateY(0)' },
+              },
+              'scale-up': {
+                '0%': { opacity: '0', transform: 'scale(0.8)' },
+                '100%': { opacity: '1', transform: 'scale(1)' },
+              },
+              'reveal-right': {
+                '0%': { opacity: '0', transform: 'translateX(-20px)' },
+                '100%': { opacity: '1', transform: 'translateX(0)' },
               }
             }
           }
@@ -79,6 +105,16 @@
           linear-gradient(to bottom, rgba(255, 255, 255, 0.03) 1px, transparent 1px);
       }
 
+      .shimmer-gradient {
+        background: linear-gradient(90deg, rgba(226,232,240,1) 0%, rgba(241,245,249,1) 50%, rgba(226,232,240,1) 100%);
+        background-size: 200% 100%;
+      }
+      
+      .dark .shimmer-gradient {
+        background: linear-gradient(90deg, rgba(30,41,59,1) 0%, rgba(51,65,85,1) 50%, rgba(30,41,59,1) 100%);
+        background-size: 200% 100%;
+      }
+
       ::-webkit-scrollbar {
         width: 8px;
       }
@@ -100,6 +136,12 @@
         -ms-overflow-style: none;
         scrollbar-width: none;
       }
+
+      .animation-delay-200 { animation-delay: 200ms; }
+      .animation-delay-400 { animation-delay: 400ms; }
+      .animation-delay-600 { animation-delay: 600ms; }
+      .animation-delay-800 { animation-delay: 800ms; }
+      .animation-delay-1000 { animation-delay: 1000ms; }
     </style>
   <script type="importmap">
 {
@@ -112,7 +154,7 @@
 </script>
 <link rel="stylesheet" href="/index.css">
 </head>
-  <body class="bg-slate-50 text-slate-900 dark:bg-slate-900 dark:text-slate-50">
+  <body class="bg-slate-50 text-slate-900 dark:bg-slate-900 dark:text-slate-50 antialiased">
     <div id="root"></div>
   <script type="module" src="/index.tsx"></script>
 </body>
