--- a/index.html
+++ b/index.html
@@ -34,8 +34,19 @@
               'fade-in-down': 'fade-in-down 0.8s ease-out forwards',
               'scale-up': 'scale-up 0.6s cubic-bezier(0.34, 1.56, 0.64, 1) forwards',
               'reveal-right': 'reveal-right 0.8s ease-out forwards',
+              'blink': 'blink 1s step-end infinite',
+              'portal-expand': 'portal-expand 0.8s ease-in-out forwards',
+              'scene-exit': 'scene-exit 0.8s cubic-bezier(0.7, 0, 0.3, 1) forwards',
+              'fly-in-left': 'fly-in-left 1s cubic-bezier(0.34, 1.56, 0.64, 1) forwards',
+              'fly-in-right': 'fly-in-right 1s cubic-bezier(0.34, 1.56, 0.64, 1) forwards',
+              'fly-in-top': 'fly-in-top 1s cubic-bezier(0.34, 1.56, 0.64, 1) forwards',
+              'fly-in-bottom': 'fly-in-bottom 1s cubic-bezier(0.34, 1.56, 0.64, 1) forwards',
             },
             keyframes: {
+              blink: {
+                '0%, 100%': { opacity: '1' },
+                '50%': { opacity: '0' },
+              },
               blob: {
                 '0%': { transform: 'translate(0px, 0px) scale(1)' },
                 '33%': { transform: 'translate(30px, -50px) scale(1.1)' },
@@ -79,6 +90,31 @@
               'reveal-right': {
                 '0%': { opacity: '0', transform: 'translateX(-20px)' },
                 '100%': { opacity: '1', transform: 'translateX(0)' },
+              },
+              'portal-expand': {
+                '0%': { transform: 'translate(-50%, -50%) scale(0)', opacity: '0' },
+                '50%': { opacity: '1' },
+                '100%': { transform: 'translate(-50%, -50%) scale(5)', opacity: '1' },
+              },
+              'scene-exit': {
+                '0%': { transform: 'scale(1) translateY(0)', filter: 'blur(0px)', opacity: '1' },
+                '100%': { transform: 'scale(1.5) translateY(-50px)', filter: 'blur(20px)', opacity: '0' },
+              },
+              'fly-in-left': {
+                '0%': { opacity: '0', transform: 'translateX(-100px) rotate(-10deg) scale(0.8)' },
+                '100%': { opacity: '1', transform: 'translateX(0) rotate(0deg) scale(1)' },
+              },
+              'fly-in-right': {
+                '0%': { opacity: '0', transform: 'translateX(100px) rotate(10deg) scale(0.8)' },
+                '100%': { opacity: '1', transform: 'translateX(0) rotate(0deg) scale(1)' },
+              },
+              'fly-in-top': {
+                '0%': { opacity: '0', transform: 'translateY(-80px) scale(0.9)' },
+                '100%': { opacity: '1', transform: 'translateY(0) scale(1)' },
+              },
+              'fly-in-bottom': {
+                '0%': { opacity: '0', transform: 'translateY(80px) scale(0.9)' },
+                '100%': { opacity: '1', transform: 'translateY(0) scale(1)' },
               }
             }
           }
@@ -137,9 +173,13 @@
         scrollbar-width: none;
       }
 
+      .animation-delay-100 { animation-delay: 100ms; }
       .animation-delay-200 { animation-delay: 200ms; }
+      .animation-delay-300 { animation-delay: 300ms; }
       .animation-delay-400 { animation-delay: 400ms; }
+      .animation-delay-500 { animation-delay: 500ms; }
       .animation-delay-600 { animation-delay: 600ms; }
+      .animation-delay-700 { animation-delay: 700ms; }
       .animation-delay-800 { animation-delay: 800ms; }
       .animation-delay-1000 { animation-delay: 1000ms; }
     </style>
@@ -154,7 +194,7 @@
 </script>
 <link rel="stylesheet" href="/index.css">
 </head>
-  <body class="bg-slate-50 text-slate-900 dark:bg-slate-900 dark:text-slate-50 antialiased">
+  <body class="bg-slate-50 text-slate-900 dark:bg-slate-900 dark:text-slate-50 antialiased overflow-x-hidden">
     <div id="root"></div>
   <script type="module" src="/index.tsx"></script>
 </body>
